--- a/src/index.css
+++ b/src/index.css
@@ -115,8 +115,10 @@ header {
 .current-boards {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   padding-right: 30px;
+  overflow-y: scroll;
+  height: 170px;
+  gap: 10px
 }
 
 .platform-name {
@@ -212,7 +214,6 @@ header {
 .coloumn-circle {
   width: 15px;
   aspect-ratio: 1;
-  background-color: #635FC7;
   border-radius: 50%;
 }
 
@@ -483,7 +484,7 @@ input[type='checkbox']:checked::before {
   font-weight: 700;
   font-size: 15px;
   line-height: 30px;
-  position: relative;
+  
 }
 
 .add-task--subtask-btn, 
@@ -538,6 +539,8 @@ input[type='checkbox']:checked::before {
 
 .remove-subtask {
   cursor: pointer;
+  background-color: transparent;
+  border: none;
 }
 
 /* edit task form  */
@@ -602,6 +605,99 @@ input[type='checkbox']:checked::before {
   gap: 13px;
 }
 
+/* add new board */
+
+.new-board-modal {
+  border: none;
+  border-radius: 8px;
+  width: 95%;
+  padding: 24px;
+}
+
+.new-board-form {
+  display: flex;
+  flex-direction: column;
+}
+
+.new-board--header {
+  margin: 0 0 24px 0;
+  font-size: 20px;
+}
+
+.new-board--title-label, 
+.new-board--column-label {
+  font-weight: 700;
+  font-size: 15px;
+  line-height: 30px;
+}
+
+.new-board--title-input, 
+.new-board--column-input {
+  border: 1px solid rgba(130, 143, 163, 0.25);
+  padding: 8px 16px;
+  border-radius: 4px;
+  line-height: 23px;
+  width: 100%;
+  font-family: Plus Jakarta Sans;
+}
+
+.new-board-column-container {
+  margin-top: 24px;
+  display: flex;
+  flex-direction: column;
+}
+
+.new-board-column-inner-container {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+  gap: 10px;
+}
+
+.create-board-btn {
+  border: none;
+  padding: 12px 0;
+  border-radius: 20px;
+  font-weight: 700;
+  font-size: 16px;
+  cursor: pointer;
+  background-color: #635FC7;
+  color: #FFF;
+  margin-top: 24px;
+}
+
+.add-column-btn {
+  border: none;
+  padding: 12px 0;
+  border-radius: 20px;
+  font-weight: 700;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+input[type='color'] {
+  appearance: none;
+  border: none;
+  padding: 0;
+  height: 30px;
+  max-width: 30px;
+  min-width: 30px;
+  background-color: transparent;
+}
+
+input[type='color']::-webkit-color-swatch-wrapper {
+  padding: 0;
+  
+}
+
+input[type='color']::-webkit-color-swatch {
+  border: none;
+  border-radius: 8px;
+}
+
+.column-color-select {
+  
+}
 
 
 /* theme */
@@ -644,15 +740,26 @@ input[type='checkbox']:checked::before {
 
 .no-open-board-container {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 90vh;
 }
 
+.no-open-board-container p {
+  color: #828FA3;
+  font-weight: 700;
+  text-align: center;
+  font-size: 20px;
+}
+
 .no-open-boards {
-  padding: 24px;
-  border-radius: 8px;
+  padding: 16px 14px;
+  border-radius: 24px;
+  background-color: #635FC7;
   box-shadow: 0px 4px 6px 0px rgba(54, 78, 126, 0.10);
+  font-size: 16px;
+  color: #FFF;
 }
 
 .open-board {
@@ -662,23 +769,31 @@ input[type='checkbox']:checked::before {
 /* errors */
 
 .pick-status-error, 
-.subtask-error {
+.subtask-error, 
+.title-error, 
+.new-board--error-no-name,
+.new-board--error-no-column {
   position: absolute;
   padding: 5px 15px;
   border-radius: 5px;
   font-weight: 700;
-  right: 10%;
-  bottom: 140px;
   font-size: 14px;
   border: 1px solid #635FC7;
 }
 
-.pick-status-error > p {
+.pick-status-error p, 
+.subtask-error p, 
+.title-error p,
+.new-board--error-no-name p, 
+.new-board--error-no-column p {
   margin: 0;
 }
 
 .pick-status-error::after, 
-.subtask-error::after {
+.subtask-error::after, 
+.title-error::after,
+.new-board--error-no-name::after,
+.new-board--error-no-column::after {
   content: '';
   position: absolute;
   width: 10px;
@@ -692,22 +807,44 @@ input[type='checkbox']:checked::before {
   border-top: 5px solid #635FC7;
 }
 
+.title-error {
+  top: 15px;
+  right: 10%;
+}
 
-.subtask-error
+.subtask-error {
+  top: 285px;
+  right: 10%;
+}
+
+.pick-status-error {
+  right: 10%;
+  bottom: 140px;
+}
+
+.new-board--error-no-name {
+  top: 65px;
+  right: 10%;
+}
+
+.new-board--error-no-column {
+ bottom: 155px;
+ right: 5%;
+}
 
 
 /* changes not saved */
 
 .animated-div--edit-task {
-  position: absolute;
+  position: relative;
 }
 
 .confirm-close-not-saved {
   position: absolute;
   border-radius: 6px;
   border: 1px solid #635FC7;
-  right: 5px;
-  top: 35px;
+  right: -19px;
+  top: -85px;
   padding: 10px;
 }
 
