--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,15 @@ html, body {
   padding: 0;
   font-family: 'Plus Jakarta Sans', sans-serif;
   overflow-y: hidden;
+
+}
+
+* {
+  user-select: none;
+}
+
+dialog:active {
+  border: none;
 }
 
 /* header */
@@ -314,11 +323,20 @@ header {
   border-radius: 6px;
   text-align: center;
   width: 280px;
-  padding: 0 20px;
-  margin: 50px 0px 0px 0px;
+  padding: 50px 0px;
 }
 
-.add-new-column h2 {
+.inner-new-column {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 6px;
+  text-align: center;
+  height: 100%;
+  width: 280px;
+}
+
+.inner-new-column h2 {
   margin: 0;
   font-family: Plus Jakarta Sans;
   font-size: 24px;
@@ -327,6 +345,7 @@ header {
   line-height: normal;
   width: max-content;
   color: #635FC7;
+  cursor: pointer;
 }
 
 /* additional info */
@@ -872,6 +891,7 @@ input[type='color']::-webkit-color-swatch {
   font-weight: 700;
   font-size: 17px;
   border: none;
+  cursor: pointer;
 }
 
 .board-btn--delete { 
@@ -932,7 +952,7 @@ input[type='color']::-webkit-color-swatch {
     align-items: center;
     margin: auto;
     top: 0;
-    height: 100%;
+    height: 100vh;
 }
 
 .inner-board-container {
@@ -1125,6 +1145,7 @@ input[type='color']::-webkit-color-swatch {
   align-items: center;
   gap: 8px;
   padding: 18px 12px 30px 12px;
+  cursor: pointer;
 }
 
 .hide-sidebar p {
@@ -1138,6 +1159,7 @@ input[type='color']::-webkit-color-swatch {
   bottom: 50px;
   padding: 15px 25px 15px 20px;
   border-radius: 0px 100px 100px 0px;
+  cursor: pointer;
 }
 
 .animated-popup {
@@ -1247,4 +1269,17 @@ input[type='color']::-webkit-color-swatch {
      color: #828FA3;
      font-size: 0.8rem;
   }
+
+  .kanban-board-tasks {
+    max-width: 390px;
+    padding-right: 20px;
+  }
+
+  /* scroll bars */
+
+  .kanban-board-tasks::-webkit-scrollbar {
+    width: 10px;
+  }
+
+ 
 }
